<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Imbeded_PRJ</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">刷新蓝牙设备</string>
    
    <string name="mainpageButton">Button control</string>
    <string name="mainpageGravity">Gravity control</string>
    <string name="mainpageRocker">Rocker control</string>
    <string name="mainpageGesture">Gesture control</string>
    <string name="mainpageCanvas">Canvas control</string>
    
    <string name="ButtonUp">↑</string>
    <string name="ButtonDown">↓</string>
    <string name="ButtonLeft">←</string>
    <string name="ButtonRight">→</string>
    <string name="ButtonStop">stop</string>
    
    <string name="Home">Home</string>
    
    <string name="button">button view</string>
    <string name="gravity">gravity view</string>
    <string name="rocker">rocker view</string>
    <string name="canvas">canvas view</string>
    
    

</resources>
