<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.example.MulCC.MainActivity"
	android:weightSum="1">
    
    <TextView
    	android:id="@+id/text"
        android:layout_width="348dp"
        android:layout_height="101dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
		android:textIsSelectable="true"
		android:textSize="24dp" />
   
    <LinearLayout
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    	</LinearLayout>
        
    <ImageButton
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:textColor="@color/black" 
        android:icon="@android:drawable/stat_sys_data_bluetooth"
        android:contentDescription="@string/refresh"
        android:src="@drawable/bluetooth"/>
        
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin"
    	android:orientation="horizontal"
    	android:gravity="bottom">

        <ImageButton
            android:id="@+id/btnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/mainpageButton"
            android:src="@drawable/button" />

		<ImageButton
            android:id="@+id/btnGravity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/mainpageGravity"
            android:src="@drawable/gravity"
			android:layout_gravity="bottom" />

	</LinearLayout>
    
    
        
</LinearLayout>
